tests/fail/elaboration/unification/mismatch/fun-type-output-type.snap
stdout = ''
stderr = '''
error: type mismatch
  ┌─ tests/fail/elaboration/unification/mismatch/fun-type-output-type.fathom:3:34
  │
3 │ fun (A : Type) -> fun (a : A) -> a
  │                                  ^

'''
